# vibeshed

./: .gitignore  AGENTS_INSTALL_INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: run.md  set-project.md
src/vibeshed/: __main__.py  cache.py  cli.py  manifest.py  markers.py  merger.py  templates_loader.py
src/vibeshed/commands/: _common.py  doctor.py  eject.py  init.py  list_cmd.py  logs.py  new.py  run.py  status.py  update.py  validate.py
src/vibeshed/migrations/: __init__.py
src/vibeshed/templates/: .gitignore  AGENTS.md  CLAUDE.md  PRINCIPLES.md  registry.yaml  requirements.txt
src/vibeshed/templates/job_template/: config.yaml  sequence.md
src/vibeshed/templates/job_template/scripts/: main.py
src/vibeshed/templates/shared/: __init__.py  api_clients.py  logging.py  notifications.py  state.py
tests/: conftest.py  test_eject.py  test_init.py  test_interpreter_selection.py  test_manifest.py  test_markers.py  test_new_and_run.py  test_update.py  test_validate.py
