[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeshed"
version = "0.2.2"
description = "Vibe Coding Framework for Personal Automations — agent-agnostic CLI for vibe-coded jobs with passthrough params, exit-code results, and enforced timeouts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "VibeShed" }]
keywords = ["automation", "agents", "claude", "cli", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
vibeshed = "vibeshed.cli:app"

[project.urls]
Homepage = "https://github.com/vibeshed/vibeshed"
Issues = "https://github.com/vibeshed/vibeshed/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vibeshed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
